{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 239,
  "lineage": "3d94a7a0-82ea-8cd6-627e-fae1f00c3a2d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_elb",
      "name": "elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635183989824:loadbalancer/Wordpress-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "Wordpress-elb-2051543684.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 300,
                "target": "HTTP:80/",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "Wordpress-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:635183989824:certificate/c53782cf-d403-42b2-b7c9-ea6191b2e86a"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Wordpress-elb",
            "security_groups": [
              "sg-045380cb263f121ea"
            ],
            "source_security_group": "635183989824/user-service-sg-20211203125946081000000001",
            "source_security_group_id": "sg-045380cb263f121ea",
            "subnets": [
              "subnet-05f2a9bcbcd95ff8d",
              "subnet-0a23d86e4e1bf4655",
              "subnet-0a8ff5514c3f4395e",
              "subnet-0b8a01cdf2106341e",
              "subnet-0d7e01415b99c25d8",
              "subnet-0ed016adef6be40fd"
            ],
            "tags": {
              "Name": "Wordpress-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:vpc/vpc-035ccf55b33a8ce62",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c7b7c26944a44982",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0faee6b4d1154be72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-035ccf55b33a8ce62",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b9b532bfbdeb92db",
            "owner_id": "635183989824",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "private-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:vpc/vpc-030c2b9596fa82be7",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01fde89691b073242",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0faee6b4d1154be72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-030c2b9596fa82be7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c0134ecc8942208c",
            "owner_id": "635183989824",
            "state": "available",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Workspace": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.elb_http.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635183989824:loadbalancer/Wordpress-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "Wordpress-elb-2051543684.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 300,
                "target": "HTTP:80/",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "Wordpress-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:635183989824:certificate/c53782cf-d403-42b2-b7c9-ea6191b2e86a"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Wordpress-elb",
            "security_groups": [
              "sg-045380cb263f121ea"
            ],
            "source_security_group": "635183989824/user-service-sg-20211203125946081000000001",
            "source_security_group_id": "sg-045380cb263f121ea",
            "subnets": [
              "subnet-05f2a9bcbcd95ff8d",
              "subnet-0a23d86e4e1bf4655",
              "subnet-0a8ff5514c3f4395e",
              "subnet-0b8a01cdf2106341e",
              "subnet-0d7e01415b99c25d8",
              "subnet-0ed016adef6be40fd"
            ],
            "tags": {
              "Name": "Wordpress-elb"
            },
            "tags_all": {
              "Name": "Wordpress-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.aws_flow_log.this",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.data.aws_subnet.default",
            "data.aws_vpc.private-public",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "aws_acm_certificate.cert",
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "data.aws_subnet_ids.public",
            "module.instance_sg.aws_security_group.this",
            "module.vpc-public-private.aws_route.public",
            "module.vpc-public-private.random_id.this",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.vpc-public-private.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:security-group/sg-045380cb263f121ea",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045380cb263f121ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "user-service-sg-20211203125946081000000001",
            "name_prefix": "user-service-sg-",
            "owner_id": "635183989824",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user-service-sg"
            },
            "tags_all": {
              "Name": "user-service-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_flow_log.this",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.vpc-public-private.random_id.this",
            "data.aws_vpc.private-public",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.vpc-public-private.aws_route.public",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.vpc-public-private.data.aws_vpc.default",
            "module.vpc-public-private.aws_cloudwatch_log_group.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-810956392",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-045380cb263f121ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "data.aws_vpc.private-public",
            "module.vpc-public-private.aws_flow_log.this",
            "module.vpc-public-private.aws_route.public",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.random_id.this",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.instance_sg.aws_security_group.this",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.data.aws_vpc.default",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.vpc-public-private.aws_s3_bucket.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-1216887857",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045380cb263f121ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_sg.aws_security_group.this",
            "module.vpc-public-private.aws_flow_log.this",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.vpc-public-private.data.aws_vpc.default",
            "data.aws_vpc.private-public",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.aws_route.public",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.random_id.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-4261568900",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045380cb263f121ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.random_id.this",
            "module.instance_sg.aws_security_group.this",
            "module.vpc-public-private.aws_route.public",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.vpc-public-private.data.aws_vpc.default",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_flow_log.this",
            "data.aws_vpc.private-public",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 443,
            "id": "sgrule-1326534991",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045380cb263f121ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.random_id.this",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.aws_route_table_association.public",
            "data.aws_vpc.private-public",
            "module.instance_sg.aws_security_group.this",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_subnet.private",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_route.public",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.vpc-public-private.aws_flow_log.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.data.aws_vpc.default",
            "module.vpc-public-private.data.aws_subnet_ids.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instance_sg_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:security-group/sg-01a02aa3e6f4d4766",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a02aa3e6f4d4766",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-045380cb263f121ea"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-service-sg-20211203130007348200000002",
            "name_prefix": "rds-service-sg-",
            "owner_id": "635183989824",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-service-sg"
            },
            "tags_all": {
              "Name": "rds-service-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_sg.aws_security_group_rule.computed_egress_rules",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.instance_sg.aws_security_group_rule.ingress_with_self",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_subnet.private",
            "module.instance_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.vpc-public-private.aws_route.public",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.random_id.this",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_self",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.vpc-public-private.data.aws_vpc.default",
            "data.aws_vpc.private-public",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.egress_rules",
            "module.instance_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.ingress_rules",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.egress_with_self",
            "module.instance_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.aws_flow_log.this",
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group_rule.computed_ingress_rules",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.instance_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.ingress_with_source_security_group_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instance_sg_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-2993711158",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01a02aa3e6f4d4766",
            "self": false,
            "source_security_group_id": "sg-045380cb263f121ea",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_route.public",
            "data.aws_vpc.private-public",
            "module.instance_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.ingress_with_self",
            "module.instance_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_self",
            "module.instance_sg.aws_security_group_rule.egress_with_self",
            "module.instance_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.ingress_rules",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.aws_vpc.this",
            "module.instance_sg.aws_security_group_rule.computed_egress_rules",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.vpc-public-private.random_id.this",
            "module.vpc-public-private.aws_flow_log.this",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.instance_sg_rds.aws_security_group.this",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.computed_ingress_rules",
            "module.instance_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc-public-private.aws_subnet.public",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.egress_rules",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.data.aws_vpc.default",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.instance_sg_rds.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-1633424195",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01a02aa3e6f4d4766",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_route_table_association.private",
            "module.vpc-public-private.data.aws_subnet_ids.default",
            "module.vpc-public-private.data.aws_vpc.default",
            "data.aws_vpc.private-public",
            "module.instance_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.vpc-public-private.aws_cloudwatch_log_group.this",
            "module.vpc-public-private.data.aws_iam_policy_document.role_policy_cloudwatch",
            "module.vpc-public-private.data.aws_subnet.default",
            "module.instance_sg.aws_security_group_rule.ingress_rules",
            "module.instance_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.vpc-public-private.aws_flow_log.this",
            "module.vpc-public-private.random_id.this",
            "module.instance_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.instance_sg_rds.aws_security_group.this",
            "module.instance_sg.aws_security_group_rule.ingress_with_self",
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.computed_ingress_rules",
            "module.instance_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.vpc-public-private.aws_iam_role.this",
            "module.vpc-public-private.aws_route.private",
            "module.vpc-public-private.aws_route_table.public",
            "module.instance_sg.aws_security_group.this",
            "module.instance_sg.aws_security_group_rule.computed_egress_rules",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_s3_bucket.this",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_iam_role_policy.this",
            "module.vpc-public-private.aws_route_table_association.public",
            "module.vpc-public-private.data.aws_iam_policy_document.role",
            "module.instance_sg.aws_security_group.this_name_prefix",
            "module.instance_sg.aws_security_group_rule.egress_rules",
            "module.vpc-public-private.aws_eip.nat",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.instance_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.egress_with_self",
            "module.instance_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.instance_sg_rds.aws_security_group.this_name_prefix",
            "module.vpc-public-private.aws_route.public",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.instance_sg.aws_security_group_rule.computed_egress_with_self",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-016203169e67247cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-016203169e67247cc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "state": "available",
            "vpc_id": "vpc-035ccf55b33a8ce62"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-02791ec12ddfa8bac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-02791ec12ddfa8bac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "state": "available",
            "vpc_id": "vpc-035ccf55b33a8ce62"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-080b7225400a69dd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-080b7225400a69dd4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "state": "available",
            "vpc_id": "vpc-035ccf55b33a8ce62"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-083efc1ef596ce8bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "id": "subnet-083efc1ef596ce8bb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "state": "available",
            "vpc_id": "vpc-035ccf55b33a8ce62"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0a20b6fe25ba278fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-0a20b6fe25ba278fb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "state": "available",
            "vpc_id": "vpc-035ccf55b33a8ce62"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0ce96db436189843c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-0ce96db436189843c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "state": "available",
            "vpc_id": "vpc-035ccf55b33a8ce62"
          }
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:vpc/vpc-035ccf55b33a8ce62",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c7b7c26944a44982",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0faee6b4d1154be72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-035ccf55b33a8ce62",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b9b532bfbdeb92db",
            "owner_id": "635183989824",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9c8134e84f6fb38",
            "association_id": "eipassoc-076fc67973cab0619",
            "domain": "vpc",
            "id": "eipalloc-0e9c8134e84f6fb38",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08d08313ed37a5b6a",
            "private_dns": "ip-10-0-4-201.ec2.internal",
            "private_ip": "10.0.4.201",
            "public_dns": "ec2-3-213-201-71.compute-1.amazonaws.com",
            "public_ip": "3.213.201.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Network": "NAT",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Network": "NAT",
              "Workspace": "default"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:internet-gateway/igw-0008d6f48a80fddea",
            "id": "igw-0008d6f48a80fddea",
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9c8134e84f6fb38",
            "connectivity_type": "public",
            "id": "nat-002645a8536c0bf11",
            "network_interface_id": "eni-08d08313ed37a5b6a",
            "private_ip": "10.0.4.201",
            "public_ip": "3.213.201.71",
            "subnet_id": "subnet-0b8a01cdf2106341e",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Workspace": "default"
            }
          },
          "dependencies": [
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07cd944389212d0381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-002645a8536c0bf11",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07cd944389212d038",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_eip.nat",
            "module.vpc-public-private.aws_nat_gateway.nat",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0008d6f48a80fddea",
            "id": "r-rtb-09dc404ac58e2a0be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09dc404ac58e2a0be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_internet_gateway.this",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:route-table/rtb-07cd944389212d038",
            "id": "rtb-07cd944389212d038",
            "owner_id": "635183989824",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002645a8536c0bf11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private-routetable",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private-routetable",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:route-table/rtb-09dc404ac58e2a0be",
            "id": "rtb-09dc404ac58e2a0be",
            "owner_id": "635183989824",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0008d6f48a80fddea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public-routetable",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public-routetable",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b33fd94a507d2371",
            "route_table_id": "rtb-07cd944389212d038",
            "subnet_id": "subnet-0a7efad8e2e15210d"
          },
          "dependencies": [
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01772a520f84770f1",
            "route_table_id": "rtb-07cd944389212d038",
            "subnet_id": "subnet-075d165df7658ff3e"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.private"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8c7c9a2e4a9200",
            "route_table_id": "rtb-07cd944389212d038",
            "subnet_id": "subnet-010ecc3e28d008a29"
          },
          "dependencies": [
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07547af4039c0262c",
            "route_table_id": "rtb-07cd944389212d038",
            "subnet_id": "subnet-06dc46b25c117aa32"
          },
          "dependencies": [
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bdf6fb1ccbf42d5",
            "route_table_id": "rtb-07cd944389212d038",
            "subnet_id": "subnet-0931586f161cfa578"
          },
          "dependencies": [
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2f178a3b41532a6",
            "route_table_id": "rtb-07cd944389212d038",
            "subnet_id": "subnet-015197ce85fc6eb87"
          },
          "dependencies": [
            "module.vpc-public-private.aws_route_table.private",
            "module.vpc-public-private.aws_subnet.private",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08060c8acc0104d8d",
            "route_table_id": "rtb-09dc404ac58e2a0be",
            "subnet_id": "subnet-0b8a01cdf2106341e"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01297d63ced3dd6ad",
            "route_table_id": "rtb-09dc404ac58e2a0be",
            "subnet_id": "subnet-0a23d86e4e1bf4655"
          },
          "dependencies": [
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_route_table.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0defc907646cf5203",
            "route_table_id": "rtb-09dc404ac58e2a0be",
            "subnet_id": "subnet-0a8ff5514c3f4395e"
          },
          "dependencies": [
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048e207efd7ec6585",
            "route_table_id": "rtb-09dc404ac58e2a0be",
            "subnet_id": "subnet-0d7e01415b99c25d8"
          },
          "dependencies": [
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_route_table.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036319bcde3328e3f",
            "route_table_id": "rtb-09dc404ac58e2a0be",
            "subnet_id": "subnet-0ed016adef6be40fd"
          },
          "dependencies": [
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b892314d6e60d6e1",
            "route_table_id": "rtb-09dc404ac58e2a0be",
            "subnet_id": "subnet-05f2a9bcbcd95ff8d"
          },
          "dependencies": [
            "module.vpc-public-private.data.aws_availability_zones.this",
            "module.vpc-public-private.aws_route_table.public",
            "module.vpc-public-private.aws_subnet.public",
            "module.vpc-public-private.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0a7efad8e2e15210d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/20",
            "id": "subnet-0a7efad8e2e15210d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-075d165df7658ff3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.112.0/20",
            "id": "subnet-075d165df7658ff3e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-010ecc3e28d008a29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/20",
            "id": "subnet-010ecc3e28d008a29",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-06dc46b25c117aa32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-06dc46b25c117aa32",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0931586f161cfa578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-0931586f161cfa578",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-015197ce85fc6eb87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.176.0/20",
            "id": "subnet-015197ce85fc6eb87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0b8a01cdf2106341e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-0b8a01cdf2106341e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0a23d86e4e1bf4655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0a23d86e4e1bf4655",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0a8ff5514c3f4395e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0a8ff5514c3f4395e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0d7e01415b99c25d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0d7e01415b99c25d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-0ed016adef6be40fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-0ed016adef6be40fd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:subnet/subnet-05f2a9bcbcd95ff8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-05f2a9bcbcd95ff8d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-public",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-030c2b9596fa82be7"
          },
          "dependencies": [
            "module.vpc-public-private.aws_vpc.this",
            "module.vpc-public-private.data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-public-private",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635183989824:vpc/vpc-030c2b9596fa82be7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03dd00c5b7877dd0c",
            "default_route_table_id": "rtb-0c0134ecc8942208c",
            "default_security_group_id": "sg-03b599dc66d934202",
            "dhcp_options_id": "dopt-0faee6b4d1154be72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-030c2b9596fa82be7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c0134ecc8942208c",
            "owner_id": "635183989824",
            "tags": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": "terraform-aws-vpc-public-private",
              "Name": "sre-vpc-public-private",
              "Workspace": "default"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}